upload file bootstrap 5: layout

--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <!--connect to css file + ?-->
+    <link rel = "stylesheet" href= "style.css">
 <body>
+    <!--làm mờ đi-->
+    <div class="fade-in">
+        <h1>hello</h1>
+    </div>
+
+    <!--slide in -->
+    <div class="slide-in">
+        <h1>hello</h1>
+    </div>
+
+    <div class="ROTATE">
+        <h1 id ="h1_hover">Contact Us</h1>
+    </div>
     
 </body>
 </html>
