--- a/bootstrap.html
+++ b/bootstrap.html
@@ -19,32 +19,19 @@
   </head>
 
   <body>
-    <div class="container">
-        <div class="row">
-            <!--side bar-->
-            <aside class="col">
-                <div>
-                    <h5>sidebar</h5>
-                    <p>some text</p>
-                </div>
-            </aside>
-            <section class="col-7">
-                <div>
-                    <h5>main content</h5>
-                    <p>some text</p>
-                </div>
-                <div class="col-4">
-                    <img src="" alt="">
-                </div>
-                <div class="col-4">
-                    <img src="" alt="">
-                </div>
-                <div class="col-4">
-                    <img src="" alt="">
-                </div>
-        </div>
+    <form class="row g-3">
+      <div class="col-auto">
+        <label for="staticEmail2" class="visually-hidden">Email</label>
+        <input type="text" readonly class="form-control-plaintext" id="staticEmail2" value="email@example.com">
+      </div>
+      <div class="col-auto">
+        <label for="inputPassword2" class="visually-hidden">Password</label>
+        <input type="password" class="form-control" id="inputPassword2" placeholder="Password">
+      </div>
+    <div class="col-auto">
+      <button type="submit" class="btn btn-primary mb-3">Confirm identity</button>
     </div>
-
+  </form>
     <!-- Bootstrap JavaScript Libraries -->
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
